# probelab

./: .gitignore  CLAUDE.md  README.md  model.py  probe.ipynb  prompt.py  pyproject.toml  viz.py
data/: ethical_unethical_activities.csv  legal_illegal_activities.csv
dataset/: base.py
dataset/loaders/: __init__.py  alpaca.py  geometry_of_truth.py  harmbench.py
docs/features/: activations.md
evaluate/: __init__.py  api.py  base.py  claude.py  generate.py
got/: __init__.py  pipeline.py  results.py  viz.py
intervention/: __init__.py  base.py  huggingface.py  transformer_lens.py  viz.py
notebooks/: geometry-of-truth.ipynb  refusal.ipynb
src/probelab/: model.py  prompt.py
src/probelab/dataset/loaders/: __init__.py  advbench.py  ethical_activities.py  legal_activities.py  malicious_instruct.py  tdc2023.py
src/probelab/evaluate/: __init__.py  api.py  base.py  claude.py  generate.py  local.py
src/probelab/experiments/geometry_of_truth/: __init__.py  pipeline.py  results.py  viz.py
src/probelab/experiments/refusal/: __init__.py  pipeline.py  results.py  viz.py
src/probelab/intervention/: transformer_lens.py
src/probelab/train/: __init__.py  activation.py  huggingface.py  sweep.py  token.py  transformer_lens.py
tests/: test_token.py
train/: __init__.py  activation.py  huggingface.py  probe.py  sweep.py  token.py  transformer_lens.py  viz.py
